@@ -91,8 +91,9 @@ public enum OrderQuestionBlock {
         List.of("manageOrdersOrderToAmend")),
     UPLOAD_AMENDED_ORDER("uploadAmendedOrder", OrderSection.AMEND_DOWNLOAD,
         List.of("manageOrdersAmendedOrder")),
-    REFUSE_CONTACT_ORDER("refuseContactQuestions", OrderSection.ORDER_DETAILS, Collections.emptyList());
-
+    REFUSE_CONTACT_ORDER("refuseContactQuestions", OrderSection.ORDER_DETAILS, Collections.emptyList()),
+    RESPONDENTS_REFUSED("respondentsRefused", OrderSection.ORDER_DETAILS,
+                       List.of("respondentsRefused_label", "respondentsRefusedSelector"));
     private final String showHideField;
     private final OrderSection section;
     private final List<String> transientDataFields;
